--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Peace Corps Tanzania
 email: pctzict@gmail.com
 description: # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/pctz" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
